--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: interlineaR
 Type: Package
-Title: Importing interlinearized corpora and associated dictionaries.
+Title: Importing interlinearized corpora and associated dictionaries
 Version: 1.0
 Date: 2015-03-18
 Author: Sylvain Loiseau
