--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 1.0
 Date: 2015-03-18
 Author: Sylvain Loiseau
 Maintainer: Sylvain Loiseau <sylvain.loiseau@univ-paris13.fr>
-Description: utility functions for importing into R corpora of interlinearized texts and associated dictionaries
+Description: utility functions for importing into R corpora of interlinearized texts and associated dictionaries.
 License: BSD_3_clause + file LICENSE
 Depends: R (>= 2.9.0), xml2
 Lazyload: yes
