rewrite of read.toolbox, bug fix ("RFlex" repaced by "interlineaR" in exemple), DESCRIPTION "Suggests" field include KableExtra.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,9 @@
 export(read.emeld)
 export(read.emeld.old)
 export(read.lift)
+export(read.lift.old)
+export(read.toolbox)
+importFrom(stats,reshape)
 importFrom(xml2,read_xml)
 importFrom(xml2,xml_attr)
 importFrom(xml2,xml_find_all)
