--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,9 +10,9 @@ License: BSD_3_clause + file LICENSE
 Depends: R (>= 2.9.0), xml2
 Lazyload: yes
 URL: http://www.r-project.org
-Collate: read.emeld.R read.lift.R interlineaR.R
+Collate: read.emeld.R read.lift.R interlineaR.R read.toolbox.R
 Encoding: UTF-8
 RoxygenNote: 6.0.1
-Suggests: knitr,
+Suggests: kableExtra, knitr,
     rmarkdown
 VignetteBuilder: knitr
