Rewrite of read.toolbox

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,20 @@
 Package: interlineaR
 Type: Package
-Title: Importing interlinearized corpora and associated dictionaries
+Title: Importing interlinearized corpora and dictionaries as produced by descriptive linguistics softwares
 Version: 1.0
 Date: 2015-03-18
-Author: Sylvain Loiseau
+Authors@R: person("Sylvain", "Loiseau", email = "sylvain.loiseau@univ-paris13.fr", role = c("aut", "cre"))
 Maintainer: Sylvain Loiseau <sylvain.loiseau@univ-paris13.fr>
 Description: utility functions for importing into R corpora of interlinearized texts and associated dictionaries.
 License: BSD_3_clause + file LICENSE
-Depends: R (>= 2.9.0), xml2
+Depends: R (>= 2.9.0), xml2, reshape2
 Lazyload: yes
-URL: http://www.r-project.org
-Collate: read.emeld.R read.lift.R interlineaR.R read.toolbox.R
+URL: https://github.com/sylvainloiseau/interlineaR
+Collate: read.emeld.R read.lift.R interlineaR-package.R read.toolbox.R read.pangloss.R dataset.R
+BuildResaveData: xz
 Encoding: UTF-8
 RoxygenNote: 6.0.1
 Suggests: kableExtra, knitr,
-    rmarkdown
+    rmarkdown,
+    testthat
 VignetteBuilder: knitr
