--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ License: BSD_3_clause + file LICENSE
 Depends: R (>= 2.9.0), xml2, reshape2
 Lazyload: yes
 URL: https://github.com/sylvainloiseau/interlineaR
-Collate: read.emeld.R read.lift.R interlineaR-package.R read.toolbox.R read.pangloss.R dataset.R
+Collate: read.emeld.R read.lift.R interlineaR-package.R read.toolbox.R read.pangloss.R dataset.R lift.specifications.R
 BuildResaveData: xz
 Encoding: UTF-8
 RoxygenNote: 6.0.1
