--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,11 +5,11 @@ export(available.example.fields)
 export(available.relation.fields)
 export(available.sense.fields)
 export(create_CLDF_metadata)
-export(read.CLDF)
 export(read.emeld)
 export(read.lift)
 export(read.pangloss)
 export(read.toolbox)
+export(read_CLDF)
 export(write_CLDF)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
